sql: resolve wrongly named config reader

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,8 @@ script:
   - hydra clients create --id foobar
   - hydra clients delete foobar
 # Test token on arbitrary endpoints
-  - curl --header "Authorization: bearer $(hydra token client)" http://localhost:4444/clients
+  - |-
+    curl --header "Authorization: bearer $(hydra token client)" http://localhost:4444/clients
 # Test token validation
   - hydra token validate $(hydra token client)
 
